samples/_failures_safe/1761481810_e2a37a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c563d13b.c: In function ‘main’:
./samples/SAFE/__tmp_c563d13b.c:157:5: error: expected identifier or ‘(’ at end of input
  157 |     char
      |     ^~~~
./samples/SAFE/__tmp_c563d13b.c:157:5: error: expected declaration or statement at end of input
